# spacetraders_tui

./: .clang-format  .gitignore  CMakeLists.txt  agent.hpp  compile_commands.json  contracts.hpp  dashboard.hpp  eventlog.hpp  events.h  focus_node.hpp  help_menu.hpp  main.cpp  main_menu.hpp  panels.h  ships.hpp  shipyards.hpp  spacetraders_app.hpp  spacetraders_tui.hpp  sptr_api.cpp  sptr_api.h  userdata.h  util.h  waypoints.hpp
core/: CMakeLists.txt
core/include/sptr/: api.h  data.h  event_bus.h  events.h  sptr.h  system_data_provider.h
core/src/: api.cpp  system_data_provider.cpp
engine/: CMakeLists.txt
engine/app/: app.h  glfw_opengl_imgui_layer.h
engine/core/: assert.h  base.h  log.cpp  log.h  timer.h  timestep.h  uuid.cpp  uuid.h
engine/drawables/: arrow.h  box.cpp  box.h  circle.cpp  circle.h  diamond.h  drawable.h  gauge.cpp  gauge.h  homeplate.cpp  homeplate.h  multi_line_text.cpp  multi_line_text.h  rect.cpp  rect.h  tape.cpp  tape.h  text.cpp  text.h  triangle.cpp  triangle.h
engine/input/: coordinate_conversions.h  filesystem.cpp  filesystem.h  input_system.cpp  input_system.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
engine/platform/opengl/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h
engine/renderer/: camera.h  editor_camera.cpp  editor_camera.h  font.h  framebuffer.cpp  gl_multiarch.h  index_buffer.cpp  index_buffer.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  uniform_buffer.cpp  vertex.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h  world.cpp  world.h
engine/renderer/arm/: framebuffer.cpp  framebuffer.h  vertex_array.cpp  vertex_array.h
engine/renderer/x86_64/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  vertex_array.cpp  vertex_array.h
engine/renderer2/: camera.cpp  font.cpp  framebuffer.h  gl_multiarch.h  index_buffer.cpp  orthographic_camera.cpp  orthographic_camera.h  render_command.h  render_object.h  renderer.cpp  renderer.h  renderer2d.h  renderer_api.h  shader.cpp  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h
engine/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scriptable_entity.h
engine/script_engine/: components_lua_bindings.h  entt_dispatcher_lua_bindings.hpp  entt_registry_lua_bindings.hpp  glm_lua_bindings.cpp  glm_lua_bindings.h  imgui_lua_bindings.h  log_bindings.h  meta_helper.hpp  script_engine.cpp  script_engine.h
glm/detail/: glm.cpp
gui/: CMakeLists.txt  app.cpp  app.h  coordinate_conversions.h  glfw_opengl_imgui_layer.cpp  glfw_opengl_imgui_layer.h  layer.h  sptr.cpp  sptr_gui.cpp  sptr_sfml.cpp  util.h
gui/imgui-docking/: CMakeLists.txt
gui/layers/: agent.h  contracts.h  eventlog.h  log_window.h  main_dockspace.h  main_menu.h  map.cpp  map.h  market.h  ship_details.h  ships.h  shipyard.h  ui_game.h  waypoints.h
gui/scripts/: agent.lua  globals.lua  imgui.lua  node.lua  primary_camera.lua  ships.lua  skybox.lua  system.lua
gui/scripts/actors/: ship.lua  system.lua  waypoint.lua
gui/scripts/anim/: orbit.lua
gui/scripts/data/: agent.lua  contracts.lua  market.lua  ships.lua  shipyard.lua  systems.lua  waypoints.lua
gui/scripts/ui/: agent.lua  contracts.lua  market.lua  ship_details_window.lua  ships.lua  shipyard.lua  shipyards.lua  system.lua  systems.lua  ui.lua  waypoints.lua
ncqt/: CMakeLists.txt  widget.cpp
ncqt/include/ncqt/: event_bus.hpp  event_loop.hpp  layout.hpp  layout_test.hpp  logger.hpp  ncqt.hpp  object.hpp  rect.hpp  renderer.hpp  text_widget.hpp  widget.hpp
notcurses_framework/: CMakeLists.txt
notcurses_framework/include/ncfw/: _helpers.hpp  context.hpp  dashboard.hpp  event_bus.h  framed_context.hpp  layout.hpp  logger.h  notcurses_app.h  plane.hpp  reader.hpp  ring_index.hpp  root.hpp  selector.hpp
notcurses_framework/src/: notcurses_app.cpp
panels/: contracts_panel.h  log_panel.h  my_agent.h  waypoints_panel.h
shaders/: basic_fragment.shader  basic_fragment_3d.shader  basic_vertex.shader  basic_vertex_3d.shader  center_cube_fragment.shader  center_cube_vertex.shader  environment_cube_fragment.shader  environment_cube_vertex.shader  lighting_fragment.shader  transformation_and_color_2D_fragment.shader  transformation_and_color_2D_vertex.shader  transformation_and_lighting_3d_fragment.shader  transformation_and_lighting_3d_vertex.shader
shapes/: box.cpp  box.h  rect.cpp  rect.h  shape.h
spacetraders-sdk/: CMakeLists.txt  README.md  get_generator.sh
spacetraders-sdk-lua/: openapiclient-1.0.0-1.rockspec  testapi.lua
spacetraders-sdk-lua/spec/: accept_contract_200_response_spec.lua  chart_spec.lua  contract_deliver_good_spec.lua  contract_payment_spec.lua  contract_spec.lua  contract_terms_spec.lua  contracts_api_spec.lua  cooldown_spec.lua  create_chart_201_response_data_spec.lua  create_ship_ship_scan_201_response_data_spec.lua  create_ship_system_scan_201_response_data_spec.lua  create_ship_system_scan_201_response_spec.lua  create_ship_waypoint_scan_201_response_data_spec.lua  create_survey_201_response_data_spec.lua  default_api_spec.lua  deliver_contract_200_response_spec.lua  deliver_contract_request_spec.lua  extract_resources_201_response_data_spec.lua  extract_resources_request_spec.lua  faction_symbol_spec.lua  faction_trait_symbol_spec.lua  factions_api_spec.lua  fulfill_contract_200_response_spec.lua  get_construction_200_response_spec.lua  get_contracts_200_response_spec.lua  get_faction_200_response_spec.lua  get_factions_200_response_spec.lua  get_jump_gate_200_response_spec.lua  get_mounts_200_response_spec.lua  get_my_ship_cargo_200_response_spec.lua  (+85 more)
test/: generate_spec.sh
tui/: CMakeLists.txt  dashboard.hpp  eventlog.hpp  main.cpp  shipyards.hpp  util.h  waypoints.hpp
tui/panels/: framed_plane.h  panel.h
(+1533 files in other folders)
